tests/invalid/void_function_as_value/main.py
def greet() -> None:
    print(1)

def run_case() -> None:
    x: int = greet()

if __name__ == "__main__":
    run_case()
